--- a/css/master.css
+++ b/css/master.css
@@ -1,8 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 body {
-    background-color: rgba(0, 255, 0, 0.8);
-    font-family: 'Fira Sans';
+    background-color: #333533;
+    font-family: 'Barlow';
+
 }
 
 h1 {
     text-align: center;
+}
+
+.navbar-item {
+    color: #E8EDDF;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+a {
+    padding: 20px;
+    color: #E8EDDF;
+    
 }
