--- a/css/master.css
+++ b/css/master.css
@@ -10,15 +10,69 @@ h1 {
     text-align: center;
 }
 
-.navbar-item {
-    color: #E8EDDF;
-    text-align: center;
-    font-weight: bold;
-    font-size: 20px;
-}
 
 a {
+    display: block;
     padding: 20px;
     color: #E8EDDF;
+    text-decoration: none;
+}
+
+.navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333533;
+    font-size: 20px;
+    border-bottom: 1px;
+    display: flex;
+    justify-content: center;
+}
+
+li a:hover {
+    background-color: #111111;
+}
+
+.navbar-item {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    transition: background-color 300ms ease-in-out;
+}
+
+.navbar-item:hover {
+
+}
+
+.active {
     
+    font-weight: bold;
+    background-color: #242423;
+
+}
+
+.image1 {
+    position: relative;
+    text-align: center;
+    color: #ffffff;
+    transition: all 1s ease-in;
+}
+
+.centered {
+    position: absolute;
+    top: 40%;
+    left: 53%;
+    transform: translate(-50%,-50%);
+    font-size: 50px;
+}
+
+.shade {
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
