--- a/css/master.css
+++ b/css/master.css
@@ -449,3 +449,14 @@ td {
     padding: 10px;
     margin: 10px;
 }
+
+.dark-button-2 {
+    display: inline;
+    background-color: #242423;
+    color: #e8eddf;
+    padding: 5px;
+    border-radius: 4px;
+    font-weight: bold;
+    margin-right: 7px;
+
+}
